var namespacelogika__migration =
[
    [ "ArchiveTypes", "d7/d65/namespacelogika__migration_1_1ArchiveTypes.html", [
      [ "Migrate", "d7/d65/namespacelogika__migration_1_1ArchiveTypes.html#a95f9e55924e9c704b6cda5f284265da3", null ]
    ] ],
    [ "Buses", "d6/d28/namespacelogika__migration_1_1Buses.html", [
      [ "Migrate", "d6/d28/namespacelogika__migration_1_1Buses.html#a1cc4989bd198fddefa6e578ed9a37c96", null ]
    ] ],
    [ "Channels", "d8/da2/namespacelogika__migration_1_1Channels.html", [
      [ "Migrate", "d8/da2/namespacelogika__migration_1_1Channels.html#ad281ae84e579911f5a4a419dffbe4e36", null ]
    ] ],
    [ "DataTypes", "d0/d5b/namespacelogika__migration_1_1DataTypes.html", [
      [ "Migrate", "d0/d5b/namespacelogika__migration_1_1DataTypes.html#a0d105693ae06d2d21645511873aca975", null ]
    ] ],
    [ "Devices", "de/d71/namespacelogika__migration_1_1Devices.html", [
      [ "Migrate", "de/d71/namespacelogika__migration_1_1Devices.html#a6adb9837670f30ba8cbbdff7ca7f89d5", null ]
    ] ],
    [ "EnumsStringToPb", "dd/dfb/namespacelogika__migration_1_1EnumsStringToPb.html", [
      [ "ArchiveTypeFromString", "dd/dfb/namespacelogika__migration_1_1EnumsStringToPb.html#a6cd2403ebf8b61a8f64789e71b0d685e", null ],
      [ "BusTypeFromString", "dd/dfb/namespacelogika__migration_1_1EnumsStringToPb.html#a7ef08cc41450116ab74448a1ab1b8151", null ],
      [ "DataTypeFromString", "dd/dfb/namespacelogika__migration_1_1EnumsStringToPb.html#aff65ceaa81e273188f7af5df55f53fbf", null ],
      [ "InternalTypeFromString", "dd/dfb/namespacelogika__migration_1_1EnumsStringToPb.html#ac3ca1722b95ca8234fc44a63bf94e91c", null ],
      [ "MeasureKindFromString", "dd/dfb/namespacelogika__migration_1_1EnumsStringToPb.html#a38f7740a0684ed2b34e76429b762031f", null ],
      [ "TagKindFromString", "dd/dfb/namespacelogika__migration_1_1EnumsStringToPb.html#af74b9983f1f3e2b028ae082c693fcb27", null ],
      [ "VarTypeFromString", "dd/dfb/namespacelogika__migration_1_1EnumsStringToPb.html#ab814064789f6c23a78d2f5bb56f034bd", null ],
      [ "X6TagTypeFromString", "dd/dfb/namespacelogika__migration_1_1EnumsStringToPb.html#abb9b37d5cd1e618b3217bedf8a17d21e", null ]
    ] ],
    [ "L4ArchiveFields", "d7/da1/namespacelogika__migration_1_1L4ArchiveFields.html", [
      [ "Migrate", "d7/da1/namespacelogika__migration_1_1L4ArchiveFields.html#a1d1119246d4f4fc8006095380949ade1", null ]
    ] ],
    [ "L4Archives", "d2/db4/namespacelogika__migration_1_1L4Archives.html", [
      [ "Migrate", "d2/db4/namespacelogika__migration_1_1L4Archives.html#a0298e8c1e92c2b6a7a24b4d23248b99d", null ]
    ] ],
    [ "L4Tags", "d5/db7/namespacelogika__migration_1_1L4Tags.html", [
      [ "Migrate", "d5/db7/namespacelogika__migration_1_1L4Tags.html#af08d7a95d8026dcd7a952d3ba02fbc06", null ]
    ] ],
    [ "L4Types", "de/d6f/namespacelogika__migration_1_1L4Types.html", [
      [ "Migrate", "de/d6f/namespacelogika__migration_1_1L4Types.html#ad369116371868610f20e8aa67ac3ff51", null ]
    ] ],
    [ "M4ArchiveFields", "d0/dba/namespacelogika__migration_1_1M4ArchiveFields.html", [
      [ "Migrate", "d0/dba/namespacelogika__migration_1_1M4ArchiveFields.html#a5b1d8525d20d86aeb1ec996185e20017", null ]
    ] ],
    [ "M4Archives", "da/dfb/namespacelogika__migration_1_1M4Archives.html", [
      [ "Migrate", "da/dfb/namespacelogika__migration_1_1M4Archives.html#a6590fc21abf73dffb6cb84fdd874fdb6", null ]
    ] ],
    [ "M4Tags", "d2/d5d/namespacelogika__migration_1_1M4Tags.html", [
      [ "Migrate", "d2/d5d/namespacelogika__migration_1_1M4Tags.html#ae210244a41f7ec9ccc761295ed137d3e", null ]
    ] ],
    [ "TagKinds", "dd/db7/namespacelogika__migration_1_1TagKinds.html", [
      [ "Migrate", "dd/db7/namespacelogika__migration_1_1TagKinds.html#a20f273b4ccd02f7fbac719a29b0178dc", null ]
    ] ],
    [ "Vars", "d1/d96/namespacelogika__migration_1_1Vars.html", [
      [ "Migrate", "d1/d96/namespacelogika__migration_1_1Vars.html#a027b45365cd1a0984c66f470ef846c13", null ]
    ] ],
    [ "X6ArchiveFields", "d2/d72/namespacelogika__migration_1_1X6ArchiveFields.html", [
      [ "Migrate", "d2/d72/namespacelogika__migration_1_1X6ArchiveFields.html#af544606638fa3e57b55de496b0978d68", null ]
    ] ],
    [ "X6Archives", "dd/d53/namespacelogika__migration_1_1X6Archives.html", [
      [ "Migrate", "dd/d53/namespacelogika__migration_1_1X6Archives.html#add56310f91aa9c6a65a5284be29ccb28", null ]
    ] ],
    [ "X6Tags", "d1/d2b/namespacelogika__migration_1_1X6Tags.html", [
      [ "Migrate", "d1/d2b/namespacelogika__migration_1_1X6Tags.html#a401458a18102fe8e5fbe8d8fc95595ab", null ]
    ] ],
    [ "X6TagTypes", "da/de1/namespacelogika__migration_1_1X6TagTypes.html", [
      [ "Migrate", "da/de1/namespacelogika__migration_1_1X6TagTypes.html#a1aeab5613b6250900e0638e9ad298313", null ]
    ] ]
];